--- a/doc/snippets.tex
+++ b/doc/snippets.tex
@@ -180,10 +180,6 @@
     \hline
       \No & train running over a junction   & \symbol{bend_train.tikz}                            & \code{bend_train.tikz}                            & \texttt{vehicles}       \\
     \hline
-      \No & view point (forward)            & \symbol{view_point_forward.tikz}                    & \code{view_point_forward.tikz}                    & \texttt{trafficcontrol} \\
-    \hline
-      \No & view point (backward)           & \symbol{view_point_backward.tikz}                   & \code{view_point_backward.tikz}                   & \texttt{trafficcontrol} \\
-    \hline
       \No & distant signal (forward)        & \symbol{distant_signal_forward.tikz}                & \code{distant_signal_forward.tikz}                & \texttt{trafficcontrol} \\
     \hline
       \No & \parbox[c]{4cm}{distant signal\\with speed indicator}
@@ -221,9 +217,23 @@
     \hline
       \No & shunt limit (backward)          & \symbol{shunt_limit_backward.tikz}                  & \code{shunt_limit_backward.tikz}                  & \texttt{trafficcontrol} \\
     \hline
-      \No & block end marker (forward)      & \symbol{block_end_marker_forward.tikz}              & \code{block_end_marker_forward.tikz}              & \texttt{trafficcontrol} \\
+      \No & view point (forward)            & \symbol{view_point_forward.tikz}                    & \code{view_point_forward.tikz}                    & \texttt{trafficcontrol} \\
     \hline
-      \No & block end marker (backward)     & \symbol{block_end_marker_backward.tikz}             & \code{block_end_marker_backward.tikz}             & \texttt{trafficcontrol} \\
+      \No & view point (backward)           & \symbol{view_point_backward.tikz}                   & \code{view_point_backward.tikz}                   & \texttt{trafficcontrol} \\
+    \hline
+      \No & braking point (forward)         & \symbol{braking_point_forward.tikz}                 & \code{braking_point_forward.tikz}                 & \texttt{trafficcontrol} \\
+    \hline
+      \No & braking point (backward)        & \symbol{braking_point_backward.tikz}                & \code{braking_point_backward.tikz}                & \texttt{trafficcontrol} \\
+    \hline
+      \No & end of movement authority (forward)
+                                            & \symbol{end_of_movement_authority_forward.tikz}     & \code{end_of_movement_authority_forward.tikz}     & \texttt{trafficcontrol} \\
+    \hline
+      \No & end of movement authority (backward)
+                                            & \symbol{end_of_movement_authority_backward.tikz}    & \code{end_of_movement_authority_backward.tikz}    & \texttt{trafficcontrol} \\
+    \hline
+      \No & danger point (forward)          & \symbol{danger_point_forward.tikz}                  & \code{danger_point_forward.tikz}                  & \texttt{trafficcontrol} \\
+    \hline
+      \No & danger point (backward)         & \symbol{danger_point_backward.tikz}                 & \code{danger_point_backward.tikz}                 & \texttt{trafficcontrol} \\
     \hline
       \No & route (forward \& backward)     & \symbol{route.tikz}                                 & \code{route.tikz}                                 & \texttt{trafficcontrol} \\
     \hline
