--- a/test/test.tex
+++ b/test/test.tex
@@ -8,7 +8,11 @@
 \usepackage{siunitx}
 \usepackage[prefix=]{xcolor-solarized}
 
-\usetikzlibrary{trackschematic}
+\usetikzlibrary{trackschematic-dev.topology}%
+\usetikzlibrary{trackschematic-dev.trafficcontrol}%
+\usetikzlibrary{trackschematic-dev.vehicles}%
+\usetikzlibrary{trackschematic-dev.constructions}%
+\usetikzlibrary{trackschematic-dev.messures}%
 
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
