--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -25,6 +25,6 @@
     Modified symbol "end of movement authority"; added symbols "braking point" and "danger point".
   }
   \vhEntry{0.6}{2021-01-02}{MS}{
-    Added symbols for "direction control", "track marking", "pylons" and electric wiring; changed symbol for "friction bufferstop"; created an encapsulating package for future flexibilty - changed load command for library to \textbackslash usepackage\{tikz-trackschematic\}.
+    Added symbols for "direction control", "track marking", "pylons" and electric wiring; changed symbol for "friction bufferstop"; created an encapsulating package for future flexibility - changed load command for library to \textbackslash usepackage\{tikz-trackschematic\}.
   }
 \end{versionhistory}
