removed local tikz-trackschematic-dev.sty call with [dev]-call provided by ctan tikz-trackschematic package

--- a/doc/tikz-trackschematic-documentation.sty
+++ b/doc/tikz-trackschematic-documentation.sty
@@ -83,7 +83,7 @@
 \sisetup{math-rm=\mathsf}
 
 \IfFileExists{tikz-trackschematic-dev.sty}{%
-  \RequirePackage[dev]{tikz-trackschematic-dev}%
+  \RequirePackage[dev]{tikz-trackschematic}%
 }{%
   \RequirePackage{tikz-trackschematic}%
 }%
