--- a/test/test.tex
+++ b/test/test.tex
@@ -8,7 +8,7 @@
 \usepackage{siunitx}
 \usepackage[prefix=]{xcolor-solarized}
 
-\usepackage[dev]{tikz-trackschematic-dev}
+\usepackage[dev]{tikz-trackschematic}
 
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
