--- a/test/test_symbology_table.tex
+++ b/test/test_symbology_table.tex
@@ -6,7 +6,7 @@
 \documentclass{article}
 \usepackage{fullpage}
 % \usepackage{glossaries}
-\usepackage[dev]{tikz-trackschematic-dev}
+\usepackage[dev]{tikz-trackschematic}
 
 % \makeglossaries
 
