--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -27,4 +27,7 @@
   \vhEntry{0.6}{2021-01-02}{MS}{
     Added symbols for "direction control", "track marking", "pylons" and electric wiring; changed symbol for "friction bufferstop"; created an encapsulating package for future flexibility - changed load command for library to \textbackslash usepackage\{tikz-trackschematic\}.
   }
+  \vhEntry{0.6.1}{2021-09-30}{MS}{
+    removed package requirement lmodern, minor correction in manual, added citation information
+  }
 \end{versionhistory}
