--- a/src/tikzlibrarytrackschematic.code.tex
+++ b/src/tikzlibrarytrackschematic.code.tex
@@ -6,7 +6,7 @@
 %
 \ProvidesFileRCS{tikzlibrarytrackschematic.code.tex}%
 %
-\RequirePackage{tikz,etoolbox,lmodern}%
+\RequirePackage{tikz,etoolbox}%
 %
 %%%%%%%%%%%%%%%
 % loading sublibraries
@@ -17,6 +17,7 @@
 % \usetikzlibrary{trackschematic.constructions}%
 % \usetikzlibrary{trackschematic.electrics}%
 % \usetikzlibrary{trackschematic.measures}%
+% \usetikzlibrary{trackschematic.symbology}%
 %%%%%%%%%%%%%%%
 %% template for new symbol definitions
 %%%%%%%%%%%%%%%
