--- a/src/tikzlibrarytrackschematic.constructions.code.tex
+++ b/src/tikzlibrarytrackschematic.constructions.code.tex
@@ -12,7 +12,7 @@
 %%%%%%%%%%%%%%%
 % global settings
 %%%%%%%%%%%%%%%
-\RequirePackage{tikz,etoolbox,lmodern}%
+\RequirePackage{tikz,etoolbox}%
 \usetikzlibrary{calc}%
 %
 \ifdeflength{\objectlength}{}{% Not defined, so define it!
