--- a/src/tikzlibrarytrackschematic.electrics.code.tex
+++ b/src/tikzlibrarytrackschematic.electrics.code.tex
@@ -12,7 +12,7 @@
 %%%%%%%%%%%%%%%
 % global settings
 %%%%%%%%%%%%%%%
-\RequirePackage{tikz,etoolbox,lmodern}%
+\RequirePackage{tikz,etoolbox}%
 \usetikzlibrary{calc,intersections,arrows.meta}%
 %
 % https://tex.stackexchange.com/questions/56353/extract-x-y-coordinate-of-an-arbitrary-point-on-curve-in-tikz
