--- a/src/tikzlibrarytrackschematic.vehicles.code.tex
+++ b/src/tikzlibrarytrackschematic.vehicles.code.tex
@@ -12,7 +12,7 @@
 %%%%%%%%%%%%%%%
 % Requirements
 %%%%%%%%%%%%%%%
-\RequirePackage{tikz,etoolbox,lmodern}%
+\RequirePackage{tikz,etoolbox}%
 \usetikzlibrary{calc}%
 %
 % https://tex.stackexchange.com/questions/56353/extract-x-y-coordinate-of-an-arbitrary-point-on-curve-in-tikz
