--- a/src/tikzlibrarytrackschematic.symbology.code.tex
+++ b/src/tikzlibrarytrackschematic.symbology.code.tex
@@ -17,7 +17,7 @@
 %
 \DeclareRobustCommand{\tsSymbol}[2][1]{%
   \adjustbox{valign=c}{%
-    \begin{tikzpicture}]%
+    \begin{tikzpicture}%
       \pic at (0,0) {symbology_#2};%
       \path ($0.5*(-0.2,-#1)$) rectangle ($0.5*(12.2,#1)$);% background rectangle to unify every cell containing a symbol
     \end{tikzpicture}%
@@ -122,4 +122,4 @@
   \end{xltabular}%
 }%
 %%%%%%%%%%%%%%%
-\end
+\endinput
