--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -30,4 +30,7 @@
   \vhEntry{0.6.1}{2021-09-30}{MS}{
     removed package requirement lmodern, minor correction in manual, added citation information
   }
+  \vhEntry{0.6.2}{2021-10-15}{MS}{
+    bug fixing
+  }
 \end{versionhistory}
