Fix spelling errors in manual

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -343,7 +343,7 @@
     \subsubsection{Tracks}\label{sec:track}
 
       Drawing a track follows the same pricipal as drawing a line in Ti\emph{k}Z.
-      There are two generell optionss of track with different commands:
+      There are two general options of tracks with different commands:
       \begin{itemize*}[label={}]
         \item \texttt{main tracks}, and
         \item \texttt{secondary tracks}.
