--- a/doc/examples/station_chamstadt.tex
+++ b/doc/examples/station_chamstadt.tex
@@ -4,7 +4,7 @@
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 
 \documentclass[tikz,border=2]{standalone}
-\usetikzlibrary{trackschematic}
+\usepackage{tikz-trackschematic} % loading the library
 
 \begin{document}
   \begin{tikzpicture}[font=\sffamily]
