--- a/test/test.tex
+++ b/test/test.tex
@@ -6,6 +6,10 @@
 \documentclass[border=2]{standalone}
 
 \usepackage{siunitx}
+\sisetup{
+  text-family-to-math = true,
+  text-series-to-math = true
+}
 \usepackage[prefix=]{xcolor-solarized}
 
 \usepackage[dev]{tikz-trackschematic}
