--- a/src/tikz-trackschematic.sty
+++ b/src/tikz-trackschematic.sty
@@ -29,7 +29,15 @@
     \usetikzlibrary{trackschematic-dev.symbology}%
     \usetikzlibrary{trackschematic-dev}%
   }{%
-    \PackageError{tikz-trackschematic}{development mode not available}{execute the dev-install.sh script provided by the package repository}%
+    \PackageWarning{tikz-trackschematic}{development mode not available}{execute the dev-install.sh script provided by the package repository}%
+    \PackageWarning{tikz-trackschematic}{development mode not available}{continuing in normal mode}%
+    \usetikzlibrary{trackschematic.topology}%
+    \usetikzlibrary{trackschematic.trafficcontrol}%
+    \usetikzlibrary{trackschematic.vehicles}%
+    \usetikzlibrary{trackschematic.constructions}%
+    \usetikzlibrary{trackschematic.electrics}%
+    \usetikzlibrary{trackschematic.measures}%
+    \usetikzlibrary{trackschematic.symbology}%
   }%
 }{%
   \usetikzlibrary{trackschematic.topology}%
