--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -1,5 +1,5 @@
 %!TEX TS-program = pdflatexmk
-%!TEX root = doc.tex
+%!TEX root = manual.tex
 
 % Copyright (c) 2018 - 2022, Martin Scheidt (ISC license)
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
@@ -32,5 +32,8 @@
   }
   \vhEntry{0.6.2}{2021-10-15}{MS}{
     bug fixing
+  }
+  \vhEntry{0.6.3}{2022-02-02}{MS|GW}{
+    fixed spelling error and documented (slip-)turnout option: points=moving 
   }
 \end{versionhistory}
