--- a/src/tikz-trackschematic.sty
+++ b/src/tikz-trackschematic.sty
@@ -5,8 +5,8 @@
 % Permission to use, copy, modify, and/or distribute this file for any purpose with or without fee is hereby granted, provided that the above copyright notice and this permission notice appear in all copies.
 %
 \NeedsTeXFormat{LaTeX2e}%
-\ProvidesPackage{tikz-trackschematic}[2022/02/02 tikz-trackschematic]%
-%
+\ProvidesPackage{tikz-trackschematic}[VERSIONDATE tikz-trackschematic]%
+% create-release.sh will remove this line and  ^--VERSIONDATE will be replaced
 %%%%%%%%%%%%%%%
 % Package options
 %%%%%%%%%%%%%%%
