updated URL for alternative 'SIGNALSCHABLONE'

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -94,7 +94,7 @@
 
   \subsection{Alternatives}
 
-    Apart from this library, there is also a \href{https://tu-dresden.de/bu/verkehr/ibv/vst/die-professur/mitarb/ulrich-maschek/signalschablone}{Signalschablone} with german (Deutsche Bahn) symbols for MS Visio.
+    Apart from this library, there is also a \href{https://tu-dresden.de/bu/verkehr/ibv/vst/die-professur/mitarb/ulrich-maschek/signalschablone} with german (Deutsche Bahn) symbols for MS Visio.
 
 
 % \newpage
