--- a/doc/versionhistory.tex
+++ b/doc/versionhistory.tex
@@ -33,7 +33,7 @@
   \vhEntry{0.6.2}{2021-10-15}{MS}{
     bug fixing
   }
-  \vhEntry{0.6.3}{2022-02-02}{MS|GW}{
-    fixed spelling error and documented (slip-)turnout option: points=moving 
+  \vhEntry{0.6.3}{2022-02-15}{MS|GW}{
+    fixed spelling error and documented (slip-)turnout option: points=moving; updated link to signalschablone; automated testing and releasing
   }
 \end{versionhistory}
