updated information about number of sublibraries

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -53,12 +53,13 @@
 
     The Ti\emph{k}Z-\emph{trackschematic} library is a toolbox of symbols geared primarily towards creating track schematic for either research or educational purposes.
     It provides a Ti\emph{k}Z frontend to some of the symbols which maybe needed to describe situations and layouts in railway operation.
-    The library is divided into four sublibraries:
+    The library is divided into the following sublibraries:
     \begin{itemize*}[label={}]
       \item \texttt{topology},
       \item \texttt{trafficcontrol},
       \item \texttt{vehicles},
       \item \texttt{constructions},
+      \item \texttt{symbology},
       \item \texttt{electrics}, and
       \item \texttt{measures}.
     \end{itemize*}
