fixed: wrong option for labels in vehicles

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -551,7 +551,7 @@
       values for \texttt{options} (comma seperated):
       \begin{itemize}[label={}]
         \item \texttt{length=\textit{length unit}} (optional, default 4cm)
-        \item \texttt{label at=\{\textit{(label-coord)}\}} (optional, default: \textit{center})
+        \item \texttt{shift label=\{\textit{(label-coord)}\}} (optional, default: (0,0))
         \item \texttt{label align=left} or \texttt{label align=right} (optional, default: center)
         \item \texttt{foreground=\textit{color}} (optional, default: \texttt{black})
         \item \texttt{background=\textit{color}} (optional, default: \texttt{white})
@@ -579,7 +579,7 @@
         \item \texttt{operation=manual} or \texttt{operation=automatic} (optional) % \texttt{operation=undefined} (default)
         \item \texttt{bend left at=\{\textit{(bend-coord)}\}} (optional, default: \textit{none})
         \item \texttt{bend right at=\{\textit{(bend-coord)}\}} (optional, default: \textit{none})
-        \item \texttt{label at=\{\textit{(label-coord)}\}} (optional, default: \textit{center})
+        \item \texttt{shift label=\{\textit{(label-coord)}\}} (optional, default: (0,0))
         \item \texttt{label align=left} or \texttt{label align=right} (optional, default: center)
         \item \texttt{foreground=\textit{color}} (optional, default: \texttt{black})
         \item \texttt{background=\textit{color}} (optional, default: \texttt{white})
